--- a/gestion_stock/src/styles/HeaderApp.css
+++ b/gestion_stock/src/styles/HeaderApp.css
@@ -20,7 +20,7 @@ body{
 }
 .navigate{
     margin-top: 3%;
-    position: relative;
+    /* position: absolute; */
     width: 100%;
     height: 70px;
     background-color: #fff;
@@ -82,8 +82,8 @@ body{
 }
 .navigate .indicator{
     position: absolute;
-    top: -55%;
-    left:22%;
+    top: -65%;
+    left:28%;
     width: 80px;
     height: 80px;
     background-color: var(--colHead);
@@ -93,9 +93,9 @@ body{
 }
 .navigate .indicator::before{
     content: '';
-    top: 45%;
+    top: 57%;
     position: absolute;
-    left: -23px;
+    left: -21px;
     width: 20px;
     height: 20px;
     background: transparent;
@@ -106,9 +106,9 @@ body{
 }
 .navigate .indicator::after{
     content: '';
-    top: 46%;
+    top: 57%;
     position: absolute;
-    left: 71px;
+    left: 69px;
     width: 20px;
     height: 20px;
     background: transparent;
@@ -121,39 +121,39 @@ body{
 .navigate ul li:nth-child(1).active ~ .indicator
 {
     position: absolute;
-    top: -55%;
-    left:49vh;
+    top: -65%;
+    left:28%;
 }
 
 .navigate ul li:nth-child(2).active ~ .indicator
 {
     position: absolute;
-    top: -55%;
-    left:75vh;
+    top: -65%;
+    left:41%;
 }
 .navigate ul li:nth-child(3).active ~ .indicator
 {
     position: absolute;
-    top: -55%;
-    left:101vh;
+    top: -65%;
+    left:55%;
 }
 .navigate ul li:nth-child(4).active ~ .indicator
 {
     position: absolute;
-    top: -55%;
-    left:128vh;
+    top: -65%;
+    left:67%;
 }
 .navigate ul li:nth-child(5).active ~ .indicator
 {
     position: absolute;
-    top: -55%;
-    left:154vh;
+    top: -65%;
+    left:79%;
 }
 .navigate ul li:nth-child(6).active ~ .indicator
 {
     position: absolute;
-    top: -55%;
-    left:181vh;
+    top: -65%;
+    left:92%;
 }
 .navigate ul li a .active .text:nth-child(1){
     left: 2%;
